fix z-index

--- a/src/themes/casket/light.scss
+++ b/src/themes/casket/light.scss
@@ -187,6 +187,8 @@ $casket-color: #FFE300;
             display: block;
             padding: 0.5em;
 
+            z-index: 4;
+
             opacity: 0;
 
             pointer-events: none;
